--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 
 }
+html, body {
+    overflow-x: hidden;
+}
+
 html{
     scroll-behavior: smooth;
 }
@@ -19,6 +23,8 @@ html{
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 
 }
+
+
 .navlist{
 display: flex;
 list-style: none;
@@ -30,6 +36,10 @@ margin: 30px;
     color: black;
     font-weight: 400;
     padding-bottom: 20px;
+}
+.item.active {
+    border-bottom: 3px solid #6f47e3;
+    color: #6f47e3;
 }
 .item:hover{
     border-bottom: 3px solid #6f47e3;
@@ -67,10 +77,11 @@ margin: 30px;
     height: 5px;
     margin: 5px;
 }
+
 .page-one{
     padding-top: 100px;
     background: #fdf6fe;
-    width: 100%x;
+    width: 100%;
     height: auto;
     display: flex;
 }
@@ -136,6 +147,7 @@ margin: 30px;
     align-self: center;
     margin-left: 160px;
 }
+
 .pagetwoimage{
     width: 500px;
     padding-top: 96px;
@@ -165,6 +177,7 @@ margin: 30px;
     border-radius: 50%;
 
 }
+
 .pagethree{
     width: 100%;
     height: 100vh;
@@ -230,6 +243,7 @@ margin: 30px;
     padding: 30px;
     border-radius: 30px;
 }
+
 .part3img{
     width: 200px;
 }
@@ -276,6 +290,7 @@ margin: 30px;
     font-weight: 600;
     font-size: 35px;
 }
+
 .school{
     font-weight: 400;
 }
@@ -293,6 +308,7 @@ margin: 30px;
 #part3texcontent{
     background: rgba(253, 246, 254, 0.9);
 }
+
 .foot{
     width: 100%;
     height: 50vh;
@@ -389,6 +405,7 @@ margin: 30px;
     padding-right: 30px;
     font-size: 12px;
 }
+
 .hirep1{
     width: 100%;
     height: 100vh;
@@ -539,6 +556,7 @@ margin: 30px;
     text-align: center;
     color: white;
   }
+
   .boxcontainer{
     width: 100%;
     height: 100vh;
@@ -614,6 +632,8 @@ margin: 30px;
     align-items: center;
     justify-content: center;
   }
+
+
   .contacts{
     width: 100%;
     height: 80vh;
@@ -643,8 +663,13 @@ margin: 30px;
     padding-bottom: 20px;
     border-bottom: solid black;
   }
+        
   #comming-soon{
     height: 50vh;
+    padding-top: 100px;
+  }
+  #comming-soon1{
+    height: auto;
     padding-top: 100px;
   }
   .contactus{
@@ -732,41 +757,44 @@ flex-direction: column;
 .gallery{
     width: 900px;
     display: flex;
-    overflow-x: scroll;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    gap: 20px;
+    max-width: 90vw;
+    padding: 10px;
+    scrollbar-width: none;
 }
 .gallery::-webkit-scrollbar{
     display: none;
  }
 .galleryone{
-    width: 100%;
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 20px;
-    padding: 10px;
-    flex: none;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-gap: 10px;
+    flex: none; /* Ensures each section remains a fixed size */
 }
 
 .galleryone img{
     width: 100%;
+    height: auto;
+    border-radius: 10px;
+    transition: transform 0.5s, filter 0.5s;
     filter: grayscale(100%);
-    transition: transform 0.5s;
 }
 
 .gallerywrap{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 10% auto;
+    margin: 10%;
 }
 .srollback{
-    width: 50px;
+    width: 40px;
     cursor: pointer;
-    margin: 40px;
 }
 .galleryone img:hover{
-    filter: grayscale(0);
-    cursor: pointer;
-    transform: scale(1.1);
+    transform: scale(1.05);
+    filter: grayscale(0%);
 
 }
 #photography{
@@ -786,7 +814,6 @@ flex-direction: column;
     justify-content: center;
     margin-bottom: 20px;
     padding-bottom: 50px;
-    border-bottom: solid 1px #6f47e3;
 }
 .f-challenge{
   width: 300px;  
@@ -818,8 +845,8 @@ flex-direction: column;
 .auto-type{
     color: #f09c06;
     margin-left: 10px;
-;
 }
+
 
 
 
@@ -829,31 +856,34 @@ flex-direction: column;
 
 @media(max-width:1000px){
     .navbar{
-        height: 100px;
+        height: 60px;
         display: flex;
+        justify-content: space-evenly;
+
     }
     .hamburger{
         display: block;
-        padding-left: 150px;
+        padding-left: 50px;
     }
     .navlist{
         position:fixed;
         display: flex;
         flex-direction: column;
-        top: 70px;
-        left: -120%;
-        background-color: #6f47e3;
-        width: 100%;
+        top: 30px;
+        left: -100%;
+        background-color: rgb(253, 246, 254, 0.9);
+        width: 0;
         align-items: center;
-        line-height: 35px;
+        line-height: 55px;
+        height: 40vh;
+        transition: width 0.5s ease-in-out;
     }
-    .greeting p{
-        width: 100%;
-        color: green;
-        font-size: 12px;
-    }
+   
     #secondlist{
-        top: 170px;
+        top: 200px;
+    }
+    .hamburger.active {
+        width: 50px;
     }
     .hamburger.active .bar:nth-child(2){
         opacity: 0;
@@ -866,9 +896,11 @@ flex-direction: column;
     }
     .navlist.active {
         left: -5%;
+        width: 60%;
     }
     #secondlist.active {
         left: -5%;
+        height: 20vh;
     }
     .page-one{
         flex-direction: column;
@@ -885,24 +917,558 @@ flex-direction: column;
     body{
         flex-direction: column;
     }
+    .item{
+        font-weight: 500;
+    }
+    
+    
 
 
 }
-@media(max-width: 800px) {
-    .hirep1h2 {
-      top: 36%;
-      font-size: 20px;
+
+@media only screen and (max-width:600px) {
+    *{
+        max-width: 100%;
+        margin: 0;
+        padding: 0;
     }
-    body{
-        flex-direction: column;
-    }
-  }
-  @media(max-width: 600px) {
-    .hirep1h2 {
-      top: 26%;
-      font-size: 15px;
-    }
-    body{
-        flex-direction: column;
-    }
-  }
+    
+    .navlist{
+        display: flex;
+        list-style: none;
+        margin: 0 0;
+        }
+        .item{
+            margin: 10px;
+            text-decoration: none;
+            color: black;
+            font-weight: 400;
+        }
+        .hamburger{
+            padding-left: 20px;
+            margin-left: 0px;
+        }
+        .bar{
+            width: 35px;
+            height: 3px;
+        }
+        .logo{
+            width: 50px;
+            padding-left: 10px;
+        }
+        .btn{
+            padding: 10px 30px;
+            font-size: 10px;
+            margin-right: 20px;
+        }
+        .page-one{
+            display: flex; 
+            align-items: center; 
+            padding-top: 50px;
+        }
+        .greeting{
+            max-width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .greeting h1{
+            font-size: 26px;
+        }
+        .greeting p{
+            max-width: 100%;
+            font-size: 16px;
+            padding-left: 20px;
+            padding-right: 20px;
+            margin: 0px;
+        }
+        .chat span{
+            font-size: 18px;
+        }
+        .pageoneimage{
+            padding-top: 0px;
+            width: 360px;
+            align-self: center;
+            padding-bottom: 25px;
+        }
+        .whatsapphandler{
+            padding-bottom: 26px;
+        }
+        .diagonalsplit{
+            margin: 0;
+            padding: 0;
+            max-width: 100%;
+            display: block;
+            height: auto;
+        }
+        .about{
+            padding-top: 20px;
+            max-width: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        .about2{
+            padding-top: 20px;
+            max-width: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        .pagetwop{
+            width: 100%;
+            margin-left: 20px;
+            margin-top: 20px;
+            padding-right: 30px;
+            padding-left: 20px;
+            font-size: 15px;
+        }
+        .pagetwoimage{
+            width: 300px;
+            padding-top: 26px;
+            padding-left: 30px;
+        }
+        .about h1{ 
+            margin-left: 120px;
+            margin-top: 20px;
+            font-size: 25px;
+        }
+        .pagetwop2{
+            width: 100%;
+            margin-left: 20px;
+            margin-top: 20px;
+            padding-right: 30px;
+            padding-left: 20px;
+            font-size: 15px;
+            padding-bottom: 50px;
+        }
+        .pagetwoimage2{
+            width: 300px;
+            padding-top: 32px;
+            padding-left: 70px;
+        }
+        .pagethree{
+            width: 100%;
+            height: auto;
+            background-size:auto;
+            flex-direction: column;
+        }  
+        .part3texcontent{
+            width: 300px;
+            margin-left:20px;
+            margin-right: 20px;
+            padding: 20px;
+            flex-direction: column;
+            margin-bottom: 40px;
+        }
+        .part3p{
+            font-size: 15px;
+        }
+        .partthreeh3{
+            font-size: 14px;
+        }
+        .partthreeh4{
+            font-size: 17px;
+        }
+        .parthreeh2{
+            font-size: 20px;
+        }
+        .diagonalsplit2{
+            max-width: 100%;
+            height: 80px;
+            gap: 0px;
+        }
+        .missionimg{
+            width: 90px;
+            margin-right: 30px;
+        
+        }
+        .mission{
+            font-size: 12px;
+            margin-left: 0px;
+            width: 120px;
+            margin-left: 40px; 
+        }
+        .part3img2{
+            width:100px;
+            height: auto;
+            margin-top: 10px;
+            align-self: center;
+        }
+        #listlinks2{
+            width: 300px;
+            padding: 0px 50px;
+        }
+        #pagethree{
+            padding-top: 30px;
+        }
+        .foot{
+           max-width:100%;
+            height: auto; 
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            box-shadow: none;
+        }
+        .footlogo{
+            width: 70px; 
+            margin-left: 50px;
+            margin-top: 30px;
+    
+        }
+        .footcard{
+            display: none;
+        }
+        .footimg{
+            width: 20px;
+            margin: 0;
+        }
+        .footh3{
+            font-size: 15px;
+            font-weight: 900;
+        }
+        .socials{
+            margin: 10px 0;
+        }
+        .foot2{
+            margin: 10px 0;
+        }
+        .lastfoot{
+            font-size: 10px;
+            max-width: 100%;
+            margin: 0;
+            padding: 0;
+            justify-content: center;
+        }
+        #mission_comming{
+            align-self: right;
+            color: #6f47e3;
+            right: 3px;
+        }
+        .hirep1{
+            max-width: 100%;
+            height: 34vh;
+            
+        }
+        .bgvideo{
+            max-width: 100%;
+            z-index: -1;
+            margin-bottom: 0px;
+        }
+        .right{
+            height: 100px;
+
+          }
+        .righttitle{
+            font-size: 20px;
+        }
+        .gradient-section {
+            height: 50vh; 
+          }
+          .vertical-line {
+            width: 1px;
+          }
+          
+          
+          .horizontal-arrow {
+            height: 1px; 
+
+        }
+        .arrowtext {
+            margin-top: 6px;
+            font-size: 13px;
+            font-weight: bold;
+
+        }
+        .horizontal-arrow:nth-child(1) {
+            top: calc(70% + 20px); 
+           
+          }
+          
+          .horizontal-arrow:nth-child(2) {
+            top: calc(50% - 140px); 
+    
+          }
+          
+          .horizontal-arrow:nth-child(3) {
+            top: calc(50% - 40px); 
+
+          }
+          
+          .horizontal-arrow:nth-child(4) {
+            top: calc(50% + 30px); 
+          }
+          .horizontal-arrow:nth-child(5) {
+            top: calc(50% + 110px); 
+            
+          }
+          
+          @keyframes grow-arrow {
+            to {
+              width: 100px; 
+            }
+          }
+          
+          .big-text {
+            font-size: 1.5rem;
+
+          }
+          
+          @keyframes move-left {
+            to {
+              left: 30px;
+            }
+          }
+          .boxcontainer{
+            max-width: 100%;
+            height: auto;
+            background-size:auto;
+          }
+          .experience{
+            padding: 10px;
+            font-size: 15px;
+            margin: 20px 0;
+          }
+          .allbox{
+            display: flex;
+            flex-direction: column;
+          }
+          .beforebox{
+            width: 250px;
+            height: auto;
+            margin: 0 0 50px;
+        
+          }
+        
+          .box{
+            width: 250px;
+            height: auto;
+            background-size: 400px 500px;
+            
+          }
+          .boxhead{
+            font-size: 20px;
+          }
+          .boxtail{
+            font-size: 15px;
+          }
+          .boxp{
+            line-height: 20px;
+          }
+          .babybook{
+            width: 80px;
+          }
+          .contacts{
+            width: 100%;
+            height: 50vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background: #fdf6fe;
+          }
+          .imagehandler1{
+            width: 130px;
+          }
+          .phone{
+            width: 20px;
+            margin-right: 20px;
+          }
+          .mycontacts{
+            list-style: none;
+            color: black;
+            font-size: 13px;
+          }
+          .contactone{
+            margin: 15px;
+          }
+          .touch{
+            font-size: 20px;
+            padding-bottom: 20px;
+            border-bottom: solid black;
+          }
+          #mission_comming{
+            align-self: right;
+            padding-left: 30px;
+            margin: 0 0 150px 0;
+            font-size: 20px;
+            color: black;
+            font-weight: 600;
+        }
+        #comming-soon{
+            border-bottom: solid 1px #fff;
+            height: auto;
+        }
+        .hirep1{
+            max-width: 100%;
+            padding-top: 62px;
+        }
+        #photo-soon{
+            margin-top: 65px;
+            padding-top: 20px;
+        }
+        #missionimg{
+            width: 100px;
+            padding-bottom: 20px;
+            padding-left: 20px;
+        }
+        #photography{
+            width: 150px;
+            font-size: 13px;
+            display: block;
+            padding-bottom: 10px;
+        }
+        .srollback{
+            width: 20px;
+            margin: 20px;
+        }
+        .gallery{
+            display: flex;
+        overflow-x: auto; /* Enable horizontal scrolling */
+        scroll-snap-type: x mandatory; /* Forces images to snap into place */
+        max-width: 100%;
+        scrollbar-width: none; /* Hides scrollbar in Firefox */
+        scroll-behavior: smooth; /* Smooth scrolling effect */
+
+        }
+        .galleryone{
+            display: flex;
+        flex-wrap: nowrap; /* Ensures images are in a row */
+        gap: 10px;
+            
+        }
+        .galleryone img{
+            width: 100vw; /* Each image takes up the full screen */
+            max-width: 100%;
+            height: auto;
+            scroll-snap-align: center; /* Ensures images snap into place */
+            border-radius: 10px;
+        }
+        .gallerywrap{
+
+    
+            align-items: center;
+            justify-content: center;
+            margin: 10% 0;
+        }
+        .first-challenge {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            margin-bottom: 30px;
+        }
+    
+        .f-challenge {
+            width: 100%; /* Make the challenge section full-width on smaller screens */
+            padding: 15px; /* Reduced padding */
+        }
+    
+        .firstchalhead {
+            margin-top: 15px; /* Reduce margin */
+            font-size: 7px; /* Increase font size slightly for better readability */
+            text-align: center;
+        }
+    
+        .f-head {
+            font-size: 16px; /* Make the font size a bit larger */
+            margin-bottom: 15px; /* Reduce margin */
+        }
+    
+        .f-paragraph {
+            font-size: 14px; /* Slightly larger font for easier reading */
+        }
+        .Personalmissionvideo{
+            font-size: 18px;
+            text-align: center;
+            padding: 0;
+        }
+        .personal{
+            height: 45vh;
+        }
+        .first-challenge iframe{
+            height: 20vh;
+        }
+        #modiimage{
+            padding: 0;
+            margin: 0;
+        }
+        .contactus{
+            flex-direction: column;
+            height: auto;
+            background-color: #6f47e3;
+
+        }
+        .backend{
+            height: auto;
+            width: 100%;
+        }
+        #contactslast{
+            margin-top: 30px;
+            padding-top: 30px;
+            border-radius: 10px;
+
+        }
+        .contactform{
+            margin-right: 50px;
+            margin-left: 0px;
+            border-radius: 10px;
+        }
+        .conthead{
+            font-size: 19px;
+        }
+        .contp{
+            font-size: 14px;
+        }
+        #contactformone p{
+            font-size: 13px;
+        }
+        #comming-soon1{
+            margin-top: 60px;
+            padding-top: 0;
+        }
+        #missionone{
+            padding-left: 80px;
+            margin: 0;
+            font-size: 15px;
+            width: auto;
+            font-weight: 600;
+        }
+        .navlist{
+            position:fixed;
+            display: flex;
+            flex-direction: column;
+            top: 60px;
+            left: -120%;
+            background-color: rgb(253, 246, 254, 0.9);
+            width: 0;
+            line-height: 55px;
+            height: 40vh;
+            transition: width 0.5s ease-in-out;
+        }
+        #secondlist{
+            top: 240px;
+            height: 10vh;
+            background-color: rgb(253, 246, 254, 0.9);
+        }
+        .item{
+            font-weight: bold;
+            opacity: 0;
+            font-size: 16px;
+            animation: fadeIn 0.5s ease-in-out 0.3s forwards;
+        }
+        .navlist.active {
+            width: 60%;
+        }
+        .navlist.active a{
+            opacity: 1;
+            visibility: visible;
+            transition-delay: 0.5s; /* Delay links until after menu expands */
+        }
+        .hamburger.active {
+            width: 50px;
+        }
+           
+        
+        
+}
