--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     padding:0;
     margin: 0;
-    font-family: futura, arial, sans-serif;
+    font-family: 'Didact Gothic', sans-serif;
     box-sizing: border-box;
 }
 
